[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/item/itemTab.gd" type="Script" id=1]
[ext_resource path="res://tools/item/saveConfirm.gd" type="Script" id=2]

[node name="Item" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="mainSeparator" type="HBoxContainer" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -665.796, 0 )

[node name="fileList" type="ItemList" parent="background/mainSeparator"]
margin_right = 130.0
margin_bottom = 768.0
rect_min_size = Vector2( 130, 0 )
size_flags_vertical = 3

[node name="dataPanel" type="PanelContainer" parent="background/mainSeparator"]
margin_left = 134.0
margin_right = 754.0
margin_bottom = 768.0
rect_min_size = Vector2( 620, 0 )
size_flags_vertical = 3

[node name="dataContainer" type="VBoxContainer" parent="background/mainSeparator/dataPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 613.0
margin_bottom = 761.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="identification" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_right = 606.0
margin_bottom = 130.0
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblIdentification" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/title"]
margin_right = 170.0
margin_bottom = 22.0
text = "↳ Identification "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/identification/title"]
margin_left = 174.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 130.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields"]
margin_left = 6.0
margin_right = 600.0
margin_bottom = 104.0
rect_min_size = Vector2( 594, 0 )
columns = 2

[node name="lblName" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 27.0
text = "Name"

[node name="txtName" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 114.0
margin_right = 594.0
margin_bottom = 32.0
clear_button_enabled = true

[node name="lblShortName" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 41.0
margin_right = 110.0
margin_bottom = 63.0
text = "Short name "

[node name="txtShortName" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 114.0
margin_top = 36.0
margin_right = 594.0
margin_bottom = 68.0
size_flags_horizontal = 3
clear_button_enabled = true

[node name="lblDescription" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 77.0
margin_right = 110.0
margin_bottom = 99.0
text = "Description"

[node name="txtDescription" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 114.0
margin_top = 72.0
margin_right = 594.0
margin_bottom = 104.0
max_length = 128

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 134.0
margin_right = 606.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 15 )

[node name="parameters" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 153.0
margin_right = 606.0
margin_bottom = 247.0
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/parameters"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblIdentification" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/parameters/title"]
margin_right = 130.0
margin_bottom = 22.0
text = "↳ Parameters "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/parameters/title"]
margin_left = 134.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/parameters"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 94.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields"]
margin_left = 6.0
margin_right = 600.0
margin_bottom = 68.0
rect_min_size = Vector2( 594, 0 )
columns = 4

[node name="lblPrice" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 27.0
rect_min_size = Vector2( 110, 0 )
text = "Price"

[node name="spnPrice" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid"]
margin_left = 114.0
margin_right = 260.0
margin_bottom = 32.0
max_value = 9999.0

[node name="txtType" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid"]
margin_left = 264.0
margin_top = 5.0
margin_right = 414.0
margin_bottom = 27.0
rect_min_size = Vector2( 110, 0 )
text = "   Item type"

[node name="optType" type="OptionButton" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid"]
margin_left = 418.0
margin_right = 588.0
margin_bottom = 32.0
text = "Consumable"
align = 1
items = [ "Consumable", null, false, 0, null, "Key", null, false, 1, null ]
selected = 0

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid"]
margin_top = 36.0
margin_right = 110.0
margin_bottom = 68.0

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid"]
margin_left = 114.0
margin_top = 36.0
margin_right = 260.0
margin_bottom = 68.0

[node name="txtTarget" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid"]
margin_left = 264.0
margin_top = 36.0
margin_right = 414.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )
text = "   Target type "

[node name="optTarget" type="OptionButton" parent="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid"]
margin_left = 418.0
margin_top = 36.0
margin_right = 588.0
margin_bottom = 68.0
rect_min_size = Vector2( 170, 0 )
size_flags_horizontal = 0
text = "None"
align = 1
items = [ "None", null, false, 0, null, "Any", null, false, 1, null, "Friendly", null, false, 2, null, "Foe", null, false, 3, null, "Any all", null, false, 4, null, "Friendly all", null, false, 5, null, "Foe all", null, false, 6, null ]
selected = 0

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 251.0
margin_right = 606.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 15 )

[node name="logic" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 270.0
margin_right = 606.0
margin_bottom = 456.0
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/logic"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblIdentification" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/logic/title"]
margin_right = 200.0
margin_bottom = 22.0
text = "↳ Action expression "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/logic/title"]
margin_left = 204.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="txtExpression" type="TextEdit" parent="background/mainSeparator/dataPanel/dataContainer/logic"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 160 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true

[node name="Control3" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 460.0
margin_right = 606.0
margin_bottom = 475.0
rect_min_size = Vector2( 0, 15 )

[node name="buttons" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 479.0
margin_right = 606.0
margin_bottom = 754.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/buttons"]
margin_top = 247.0
margin_right = 606.0
margin_bottom = 275.0
alignment = 1

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_right = 126.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="btnSave" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 130.0
margin_right = 256.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Save|Create"

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 260.0
margin_right = 310.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )

[node name="btnReload" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 314.0
margin_right = 476.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Reload entities"

[node name="Control3" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 480.0
margin_right = 606.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="saveConfirm" type="ConfirmationDialog" parent="."]
margin_right = 218.0
margin_bottom = 74.0
script = ExtResource( 2 )

[connection signal="item_selected" from="background/mainSeparator/fileList" to="." method="_on_fileList_item_selected"]
[connection signal="text_changed" from="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid/txtName" to="." method="_on_txtName_text_changed"]
[connection signal="text_changed" from="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid/txtShortName" to="." method="_on_txtShortName_text_changed"]
[connection signal="text_changed" from="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid/txtDescription" to="." method="_on_txtDescription_text_changed"]
[connection signal="value_changed" from="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid/spnPrice" to="." method="_on_spnPrice_value_changed"]
[connection signal="item_selected" from="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid/optType" to="." method="_on_optType_item_selected"]
[connection signal="item_selected" from="background/mainSeparator/dataPanel/dataContainer/parameters/fields/grid/optTarget" to="." method="_on_optTarget_item_selected"]
[connection signal="text_changed" from="background/mainSeparator/dataPanel/dataContainer/logic/txtExpression" to="." method="_on_txtExpression_text_changed"]
[connection signal="pressed" from="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer/btnSave" to="." method="_on_btnSave_pressed"]
[connection signal="pressed" from="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer/btnReload" to="." method="_on_btnReload_pressed"]
[connection signal="confirmed" from="saveConfirm" to="." method="_on_saveConfirm_confirmed"]
